Cambio el fondo, le paso directamente una url

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(/Img/1918.jpg);
+    background-image: url(https://img.freepik.com/vector-gratis/fondo-azul-numeros-binarios_1055-1918.jpg?w=1060&t=st=1698612596~exp=1698613196~hmac=aa4d10b480ddd970bbd114dc17d099654ff88b28a8fd84b374f308a74e8bcbe0.jpg);
     background-size: cover;
     margin: 0;
     padding: 0;
